Make change to default map file

--- a/DemoProject/Config/DefaultGame.ini
+++ b/DemoProject/Config/DefaultGame.ini
@@ -2,3 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1E6635AC483815A044C222A9F43F5FA0
+Description=Proof of concept for git lfs over s3 workflow
+bShouldWindowPreserveAspectRatio=False
+bAllowWindowResize=False
+
